univention-radius (7.0.5-5) unstable; urgency=medium

  * Bug #55610: add logrotate configuration for the listener module and a UCR variable to modify it

 -- Mika Westphal <westphal@univention.de>  Mon, 14 Aug 2023 14:38:55 +0200

univention-radius (7.0.5-4) unstable; urgency=medium

  * Bug #56371: Replaced the German word "Kennwort" with "Passwort" inside the
    translations

 -- Mika Westphal <westphal@univention.de>  Fri, 04 Aug 2023 09:56:14 +0200

univention-radius (7.0.5-3) unstable; urgency=medium

  * Bug #55757: allow login with the primary email address

 -- Maximilian Janßen <janssen@univention.de>  Fri, 24 Feb 2023 19:06:27 +0100

univention-radius (7.0.5-2) unstable; urgency=medium

  * Bug #55247: disable tls v3 for radius

 -- Maximilian Janßen <janssen@univention.de>  Tue, 14 Feb 2023 12:53:35 +0100

univention-radius (7.0.5-1) unstable; urgency=medium

  * Bug #31771: migrate tabs to spaces

 -- Florian Best <best@univention.de>  Fri, 03 Feb 2023 04:17:45 +0100

univention-radius (7.0.4-1) unstable; urgency=medium

  * Bug #53092: Added fail checks for the join scripts

 -- Mika Westphal <westphal@univention.de>  Thu, 02 Feb 2023 13:18:04 +0100

univention-radius (7.0.3-1) unstable; urgency=medium

  * Bug #55554: Fix UCR variable typing

 -- Philipp Hahn <hahn@univention.de>  Wed, 28 Sep 2022 19:55:58 +0200

univention-radius (7.0.2-2) unstable; urgency=medium

  * Bug #54662: Increase Joinscript version: VLAN in RADIUS

 -- Peter Stoll <stoll.extern@univention.de>  Mon, 20 Jun 2022 16:22:05 +0200

univention-radius (7.0.2-1) unstable; urgency=medium

  * Bug #54706: drop Python 2 packages

 -- Florian Best <best@univention.de>  Mon, 13 Jun 2022 12:26:11 +0200

univention-radius (7.0.1-10) unstable; urgency=medium

  * Bug #25916: Fix case sensitivity problem

 -- Peter Stoll <stoll.extern@univention.de>  Mon, 09 May 2022 10:17:45 +0200

univention-radius (7.0.1-9) unstable; urgency=medium

  * Bug #25916 - VLAN-Zuordnung via 802.1x/RADIUS
