@@ -1,8 +1,10 @@
 univention-radius (7.0.5-5) unstable; urgency=medium
 
-  * Bug #55610: add logrotate configuration for the listener module and a UCR variable to modify it
+  * Revert "Bug #55610: added radius logrotate configuration and a UCR variable"
 
- -- Mika Westphal <westphal@univention.de>  Mon, 14 Aug 2023 14:38:55 +0200
+    This reverts commit e5111c40f39cbc8ea8012ec0e81e3acd33c2d8c1.
+
+ -- Mika Westphal <westphal@univention.de>  Tue, 22 Aug 2023 12:37:12 +0200
 
 univention-radius (7.0.5-4) unstable; urgency=medium
 
